[package]
name = "keyringrs"
version = "0.3.1"
edition = "2021"

[lib]
name = "keyringrs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23.3", features = ["abi3", "abi3-py39"] }

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3.6.1", features = ["linux-native-sync-persistent", "crypto-rust", "vendored"] }

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3.6.1", features = ["apple-native"] }

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3.6.1", features = ["windows-native"] }

[target.'cfg(any(target_os = "freebsd", target_os = "openbsd"))'.dependencies]
keyring = { version = "3.6.1" }
